--- a/main-files/assets/scss/_footer.scss
+++ b/main-files/assets/scss/_footer.scss
@@ -1,8 +1,8 @@
 .footer-widgets-wrapper {
-  padding: 70px 0 100px;
+  padding: 70px 0px 100px;
 
   @include breakpoint(max-lg) {
-    padding: 50px 0 80px;
+    padding: 50px 0px 80px;
   }
 
   .single-footer-widget {
@@ -72,7 +72,7 @@
   @include flex;
   justify-content: space-between;
   border-top: 1px solid rgba(67, 118, 251, 0.3);
-  padding: 30px 0;
+  padding: 30px 0px;
 
   @include breakpoint(max-md) {
     flex-wrap: wrap;
@@ -106,12 +106,12 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding-top: 120px;
   @include breakpoint(max-xl) {
-    padding-top: 100px 0;
+    padding-top: 100px 0px;
   }
   @include breakpoint(max-lg) {
     padding-top: 80px 0;
   }
-  padding-bottom: 0;
+  padding-bottom: 0px;
   color: $white;
   background-position: center;
   background-repeat: no-repeat;
