--- a/main-files/assets/scss/_offer.scss
+++ b/main-files/assets/scss/_offer.scss
@@ -16,3 +16,135 @@
     font-size: 16px;
   }
 }
+
+.offer-4-highlight {
+  .container {
+    max-width: $max-width;
+
+    .highlight-4-left {
+      width: 100%;
+      background: #ffdedc;
+      padding: 30px;
+      @include breakpoint(xl) {
+        padding: 60px 40px;
+      }
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+
+      .left-side-body {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        @include breakpoint(xl) {
+          justify-content: space-between;
+          flex-direction: row;
+        }
+        margin-top: 50px;
+
+        .title {
+          span {
+            color: #ff4035;
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 32px;
+            text-transform: uppercase;
+          }
+
+          h5 {
+            font-size: 24px;
+            font-weight: 600;
+            line-height: 32px;
+            text-align: left;
+            color: #161616;
+            text-transform: capitalize;
+            margin-top: 10px;
+          }
+        }
+
+        .button {
+          margin-top: 10px;
+          @include breakpoint(xl) {
+            margin-top: 0;
+          }
+          button {
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 19.2px;
+            text-align: center;
+            color: $white;
+            background: #ff4035;
+            text-transform: uppercase;
+            padding: 15px 50px;
+            border-radius: 50px;
+          }
+        }
+      }
+    }
+
+    .highlight-4-right {
+      width: 100%;
+      background: #ccd9eb;
+      padding: 30px;
+      @include breakpoint(xl) {
+        padding: 60px 40px;
+      }
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+
+      .right-side-body {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        @include breakpoint(xl) {
+          justify-content: space-between;
+          flex-direction: row;
+        }
+        margin-top: 50px;
+
+        .title {
+          span {
+            color: #ff4035;
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 32px;
+            text-transform: uppercase;
+          }
+
+          h5 {
+            font-size: 24px;
+            font-weight: 600;
+            line-height: 32px;
+            text-align: left;
+            color: #161616;
+            text-transform: capitalize;
+            margin-top: 10px;
+          }
+        }
+
+        .button {
+          margin-top: 10px;
+          @include breakpoint(xl) {
+            margin-top: 0;
+          }
+          button {
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 19.2px;
+            text-align: center;
+            color: $text-color-2;
+            background: $white;
+            text-transform: uppercase;
+            padding: 15px 50px;
+            border-radius: 50px;
+          }
+        }
+      }
+    }
+  }
+}
