--- a/main-files/assets/scss/_shop.scss
+++ b/main-files/assets/scss/_shop.scss
@@ -1450,3 +1450,19 @@
     }
   }
 }
+
+.shop-image-4 {
+  img {
+    width: 188px !important;
+    height: 90px !important;
+    object-fit: contain;
+  }
+}
+
+.feature-4-thumb {
+  img {
+    max-width: 140px;
+    height: 155px;
+    object-fit: contain;
+  }
+}
