--- a/landing/assets/sass/_layout/_banner.scss
+++ b/landing/assets/sass/_layout/_banner.scss
@@ -1,141 +1,147 @@
 // Banner area start here ***
 .banner {
-	&-area {
-		overflow: hidden;
-		position: relative;
-		z-index: 1;
-		padding-top: 210px;
-		padding-bottom: 250px;
-		background-color: #fafdfa;
-		@include breakpoint(max-md) {
-			padding: 140px 0;
-		}
-		border-bottom: 10px solid var(--primary-color);
-	}
-	&__hero {
-		position: absolute;
-		right: 3%;
-		bottom: 0;
-		z-index: -1;
-		&-info {
-			position: absolute;
-			right: 0;
-			bottom: 10%;
-			z-index: -1;
-			@include breakpoint(max-lg) {
-				display: none;
-			}
-		}
-		@include breakpoint(max-lg) {
-			display: none;
-		}
-	}
-	&__content {
-		max-width: 560px;
-		h1 {
-			span {
-				position: relative;
-				z-index: 1;
-				color: var(--heading-color);
-				&::after {
-					position: absolute;
-					background-color: #ffc422;
-					content: "";
-					width: 100%;
-					height: 20%;
-					left: 0;
-					bottom: 15px;
-					z-index: -1;
-				}
-			}
-		}
-	}
-	&-two {
-		&-area {
-			overflow: hidden;
-			position: relative;
-			z-index: 1;
-			background-color: #1b575b;
-		}
-		&__content {
-			max-width: 545px;
-			padding-top: 200px;
-			padding-bottom: 260px;
-			h4 {
-				font-size: 20px;
-				line-height: 25px;
-				letter-spacing: 2px;
-				color: var(--white);
-				padding: 5px 15px;
-				border-radius: 12px;
-				background-color: var(--primary-two);
-				display: inline-block;
-				text-transform: uppercase;
-			}
-			h1 {
-				font-size: 60px;
-				line-height: 72px;
-				color: var(--white);
-				text-transform: capitalize;
-			}
-			p {
-				color: var(--paragraph-light);
-			}
-			@include breakpoint(max-md) {
-				padding: 120px 0;
-				h1 {
-					font-size: 50px;
-					line-height: 60px;
-					color: var(--white);
-					text-transform: capitalize;
-				}
-			}
-		}
-		&__image {
-			max-width: 892px;
-			position: absolute;
-			top: 50%;
-			right: 5%;
-			transform: translateY(-50%);
-			@include breakpoint(max-xxxl) {
-				max-width: 700px;
-			}
-			@include breakpoint(max-xxl) {
-				max-width: 500px;
-			}
-			@include breakpoint(max-xl) {
-				display: none;
-			}
-		}
-	}
-	&-inner {
-		&-area {
-			overflow: hidden;
-			background-color: #1b575b;
-		}
-		&__content {
-			text-align: center;
-			max-width: 490px;
-			margin: 0 auto;
-			h5 {
-				margin-bottom: 10px;
-				color: var(--white);
-				display: inline-block;
-				padding: 5px 16px;
-				background-color: var(--primary-two);
-				border-radius: 12px;
-				text-transform: uppercase;
-				letter-spacing: 2px;
-				font-size: 20px;
-				line-height: 24px;
-				span {
-					color: var(--white);
-				}
-				a {
-					color: var(--white);
-				}
-			}
-		}
-	}
+  &-area {
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    padding-top: 210px;
+    padding-bottom: 250px;
+    background-color: #fafdfa;
+    @include breakpoint(max-md) {
+      padding: 140px 0;
+    }
+    border-bottom: 10px solid var(--primary-color);
+  }
+  &__hero {
+    position: absolute;
+    right: 3%;
+    bottom: 0;
+    z-index: -1;
+    &-info {
+      position: absolute;
+      right: 0;
+      bottom: 10%;
+      z-index: -1;
+      @include breakpoint(max-lg) {
+        display: none;
+      }
+    }
+    @include breakpoint(max-lg) {
+      display: none;
+    }
+  }
+  &__content {
+    max-width: 560px;
+    h1 {
+      font-size: 48px;
+      line-height: 65px;
+      font-weight: 900;
+    }
+
+    h1 {
+      span {
+        position: relative;
+        z-index: 1;
+        color: var(--heading-color);
+        &::after {
+          position: absolute;
+          background-color: #ffc422;
+          content: "";
+          width: 100%;
+          height: 20%;
+          left: 0;
+          bottom: 15px;
+          z-index: -1;
+        }
+      }
+    }
+  }
+  &-two {
+    &-area {
+      overflow: hidden;
+      position: relative;
+      z-index: 1;
+      background-color: #1b575b;
+    }
+    &__content {
+      max-width: 545px;
+      padding-top: 200px;
+      padding-bottom: 260px;
+      h4 {
+        font-size: 20px;
+        line-height: 25px;
+        letter-spacing: 2px;
+        color: var(--white);
+        padding: 5px 15px;
+        border-radius: 12px;
+        background-color: var(--primary-two);
+        display: inline-block;
+        text-transform: uppercase;
+      }
+      h1 {
+        font-size: 60px;
+        line-height: 72px;
+        color: var(--white);
+        text-transform: capitalize;
+      }
+      p {
+        color: var(--paragraph-light);
+      }
+      @include breakpoint(max-md) {
+        padding: 120px 0;
+        h1 {
+          font-size: 50px;
+          line-height: 60px;
+          color: var(--white);
+          text-transform: capitalize;
+        }
+      }
+    }
+    &__image {
+      max-width: 892px;
+      position: absolute;
+      top: 50%;
+      right: 5%;
+      transform: translateY(-50%);
+      @include breakpoint(max-xxxl) {
+        max-width: 700px;
+      }
+      @include breakpoint(max-xxl) {
+        max-width: 500px;
+      }
+      @include breakpoint(max-xl) {
+        display: none;
+      }
+    }
+  }
+  &-inner {
+    &-area {
+      overflow: hidden;
+      background-color: #1b575b;
+    }
+    &__content {
+      text-align: center;
+      max-width: 490px;
+      margin: 0 auto;
+      h5 {
+        margin-bottom: 10px;
+        color: var(--white);
+        display: inline-block;
+        padding: 5px 16px;
+        background-color: var(--primary-two);
+        border-radius: 12px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 20px;
+        line-height: 24px;
+        span {
+          color: var(--white);
+        }
+        a {
+          color: var(--white);
+        }
+      }
+    }
+  }
 }
 // Banner area end here ***
