--- a/main-files/assets/scss/_category.scss
+++ b/main-files/assets/scss/_category.scss
@@ -20,6 +20,7 @@
         height: 195px;
         border-radius: 20px;
         border: 1px solid #16161614;
+        cursor: pointer;
 
         &-icon {
           width: 66px;
