--- a/main-files/dashboard/assets/css/main.css
+++ b/main-files/dashboard/assets/css/main.css
@@ -11,11 +11,13 @@
   --theme2: #253154;
   --header: #000000;
   --text: #555555;
+  --text-2: #7a8699;
   --border: #d5d5d5;
   --border-2: #e6e6e6;
   --bg: #f4f6fa;
   --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
   --footer: #0a111e;
+  --inter: "Inter", sans-serif;
 }
 
 /* --------------------------------------------
@@ -361,23 +363,34 @@ span {
   padding: 26px 28px;
   color: var(--white);
   background-color: var(--theme2);
-  font-family: "Inter", sans-serif;
+  font-family: var(--inter);
 }
 .car-dashboard-section .car-dashboard-content .car-dashboard-nav .left-content {
   color: var(--white) !important;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
-.car-dashboard-section .car-dashboard-content .car-dashboard-nav .left-content ol {
+.car-dashboard-section .car-dashboard-content .car-dashboard-nav .left-content button.menu-button i {
+  font-size: 20px;
+  color: var(--white);
+}
+.car-dashboard-section .car-dashboard-content .car-dashboard-nav .left-content div.my-breadcrumb ol {
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
-  align-items: center;
+  display: flex !important;
+  align-items: center !important;
   gap: 10px;
   font-weight: 500;
   font-size: 16px;
 }
-.car-dashboard-section .car-dashboard-content .car-dashboard-nav .left-content ol .active {
-  font-weight: normal;
+.car-dashboard-section .car-dashboard-content .car-dashboard-nav .left-content div.my-breadcrumb ol li {
+  vertical-align: middle;
+}
+.car-dashboard-section .car-dashboard-content .car-dashboard-nav .left-content div.my-breadcrumb ol .active {
+  font-weight: 400 !important;
+  color: var(--text-2) !important;
 }
 .car-dashboard-section .car-dashboard-content .car-dashboard-nav .right-content .input {
   background-color: rgba(255, 255, 255, 0.0392156863);
@@ -387,8 +400,8 @@ span {
   display: flex;
   align-items: center;
   gap: 0;
-  padding: 10px 16px;
-  color: var(--white);
+  padding: 8px 16px;
+  color: var(--white) !important;
 }
 .car-dashboard-section .car-dashboard-content .car-dashboard-nav .right-content .input input {
   background-color: transparent;
