--- a/main-files/dashboard/assets/scss/_typography.scss
+++ b/main-files/dashboard/assets/scss/_typography.scss
@@ -8,7 +8,7 @@
 
 $heading-font: "Jost", sans-serif;
 $body-font: "Kanit", sans-serif;
-$font-inter: "Inter", sans-serif;
+$font-inter: var(--inter);
 
 //font-family: "Font Awesome 6 Free";
 $fa: "Font Awesome 6 Pro";
