--- a/main-files/dashboard/assets/scss/_variables.scss
+++ b/main-files/dashboard/assets/scss/_variables.scss
@@ -8,25 +8,28 @@
   --theme2: #253154;
   --header: #000000;
   --text: #555555;
+  --text-2: #7a8699;
   --border: #d5d5d5;
   --border-2: #e6e6e6;
   --bg: #f4f6fa;
   --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
   --footer: #0a111e;
+  --inter: "Inter", sans-serif;
 }
 
 // Theme Color - Default Colors
+$body: var(--body);
 $black: var(--black);
 $white: var(--white);
 $theme-color: var(--theme);
 $theme-color-2: var(--theme2);
+$theme-fade: var(--theme-fade);
+$theme-fade-2: var(--theme-fade-2);
 $text-color: var(--text);
 $text-color-2: var(--text-2);
-$text-fade: var(--text-fade);
 $header-color: var(--header);
 $border-color: var(--border);
 $border-color-2: var(--border-2);
 $bg-color: var(--bg);
 $shadow: var(--box-shadow);
-$footer-3: var(--footer);
-$max-width: var(--max-width);
+$footer: var(--footer);
