--- a/main-files/dashboard/assets/scss/_car.scss
+++ b/main-files/dashboard/assets/scss/_car.scss
@@ -97,6 +97,35 @@
         }
       }
     }
+
+    .main-content {
+      margin-top: 32px;
+      margin-bottom: 24px;
+
+      .welcome-content {
+        .content-filters {
+          button {
+            padding: 10px 16px;
+            font-weight: 500;
+            border-radius: 8px;
+          }
+
+          button:first-child {
+            background-color: $bg-color-2;
+            color: $text-color-3;
+
+            i {
+              color: $theme-color;
+            }
+          }
+
+          button:last-child {
+            background-color: $theme-color;
+            color: $white;
+          }
+        }
+      }
+    }
   }
 
   // Car dashboard right
