--- a/main-files/dashboard/assets/css/main.css
+++ b/main-files/dashboard/assets/css/main.css
@@ -12,9 +12,11 @@
   --header: #000000;
   --text: #555555;
   --text-2: #7a8699;
+  --text-3: #404a60;
   --border: #d5d5d5;
   --border-2: #e6e6e6;
   --bg: #f4f6fa;
+  --bg-2: #ecf1ff;
   --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
   --footer: #0a111e;
   --inter: "Inter", sans-serif;
@@ -433,6 +435,26 @@ span {
 .car-dashboard-section .car-dashboard-content .car-dashboard-nav .right-content .theme-button i,
 .car-dashboard-section .car-dashboard-content .car-dashboard-nav .right-content .notification-button i {
   font-size: 24px;
+  color: var(--white);
+}
+.car-dashboard-section .car-dashboard-content .main-content {
+  margin-top: 32px;
+  margin-bottom: 24px;
+}
+.car-dashboard-section .car-dashboard-content .main-content .welcome-content .content-filters button {
+  padding: 10px 16px;
+  font-weight: 500;
+  border-radius: 8px;
+}
+.car-dashboard-section .car-dashboard-content .main-content .welcome-content .content-filters button:first-child {
+  background-color: var(--bg-2);
+  color: var(--text-3);
+}
+.car-dashboard-section .car-dashboard-content .main-content .welcome-content .content-filters button:first-child i {
+  color: var(--theme);
+}
+.car-dashboard-section .car-dashboard-content .main-content .welcome-content .content-filters button:last-child {
+  background-color: var(--theme);
   color: var(--white);
 }
 .car-dashboard-section .car-right-sidebar {
