--- a/main-files/dashboard/assets/scss/_variables.scss
+++ b/main-files/dashboard/assets/scss/_variables.scss
@@ -9,9 +9,11 @@
   --header: #000000;
   --text: #555555;
   --text-2: #7a8699;
+  --text-3: #404a60;
   --border: #d5d5d5;
   --border-2: #e6e6e6;
   --bg: #f4f6fa;
+  --bg-2: #ecf1ff;
   --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
   --footer: #0a111e;
   --inter: "Inter", sans-serif;
@@ -27,9 +29,11 @@ $theme-fade: var(--theme-fade);
 $theme-fade-2: var(--theme-fade-2);
 $text-color: var(--text);
 $text-color-2: var(--text-2);
+$text-color-3: var(--text-3);
 $header-color: var(--header);
 $border-color: var(--border);
 $border-color-2: var(--border-2);
 $bg-color: var(--bg);
+$bg-color-2: var(--bg-2);
 $shadow: var(--box-shadow);
 $footer: var(--footer);
