--- a/main-files/dashboard/assets/scss/_variables.scss
+++ b/main-files/dashboard/assets/scss/_variables.scss
@@ -3,13 +3,14 @@
   --black: #000;
   --white: #fff;
   --theme: #4376fb;
-  --theme-fade: #4377fb21;
+  --theme-fade: rgba(67, 118, 251, 0.12);
   --theme-fade-2: #4377fb62;
   --theme2: #253154;
   --header: #000000;
   --text: #555555;
   --text-2: #7a8699;
   --text-3: #404a60;
+  --text-4: #1c1c1c;
   --border: #d5d5d5;
   --border-2: #e6e6e6;
   --bg: #f4f6fa;
@@ -30,6 +31,7 @@ $theme-fade-2: var(--theme-fade-2);
 $text-color: var(--text);
 $text-color-2: var(--text-2);
 $text-color-3: var(--text-3);
+$text-color-4: var(--text-4);
 $header-color: var(--header);
 $border-color: var(--border);
 $border-color-2: var(--border-2);
