--- a/main-files/dashboard/assets/css/main.css
+++ b/main-files/dashboard/assets/css/main.css
@@ -472,6 +472,7 @@ span {
   padding: 24px;
   color: var(--text-4);
   border-radius: 16px;
+  box-shadow: var(--box-shadow);
 }
 .car-dashboard-section .car-dashboard-content .main-content .block-active-user .block-content p,
 .car-dashboard-section .car-dashboard-content .main-content .block-new-user .block-content p,
@@ -515,9 +516,30 @@ span {
   transform: rotate(120deg);
 }
 .car-dashboard-section .car-dashboard-content .main-content .main-chart {
-  background-color: var(--white);
-  padding: 24px 20px;
+  width: 100%;
+  max-height: 330px;
+}
+.car-dashboard-section .car-dashboard-content .main-content .main-chart .chart-container {
+  background: var(--white);
+  box-shadow: var(--box-shadow);
+  padding: 20px;
+  position: relative;
+  width: 100%;
+  height: 330px;
   border-radius: 16px;
+}
+.car-dashboard-section .car-dashboard-content .main-content .main-chart .legend-btn {
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: normal;
+  color: #555;
+  transition: opacity 0.3s ease;
+}
+.car-dashboard-section .car-dashboard-content .main-content .main-chart .legend-btn.hidden {
+  opacity: 0.5;
+}
+.car-dashboard-section .car-dashboard-content .main-content .main-chart #myChart {
+  max-height: 260px; /* Adjust chart height to fit within container */
 }
 
 body {
