--- a/main-files/dashboard/assets/scss/_car.scss
+++ b/main-files/dashboard/assets/scss/_car.scss
@@ -140,6 +140,7 @@
         padding: 24px;
         color: $text-color-4;
         border-radius: 16px;
+        box-shadow: $shadow;
 
         .block-content {
           p {
@@ -174,9 +175,31 @@
       }
 
       .main-chart {
-        background-color: $white;
-        padding: 24px 20px;
-        border-radius: 16px;
+        width: 100%;
+        max-height: 330px;
+
+        .chart-container {
+          background: $white;
+          box-shadow: $shadow;
+          padding: 20px;
+          position: relative;
+          width: 100%;
+          height: 330px;
+          border-radius: 16px;
+        }
+        .legend-btn {
+          cursor: pointer;
+          font-size: 14px;
+          font-weight: normal;
+          color: #555;
+          transition: opacity 0.3s ease;
+        }
+        .legend-btn.hidden {
+          opacity: 0.5;
+        }
+        #myChart {
+          max-height: 260px; /* Adjust chart height to fit within container */
+        }
       }
     }
   }
