Fixed world map bugs

--- a/main-files/dashboard/assets/css/main.css
+++ b/main-files/dashboard/assets/css/main.css
@@ -542,6 +542,7 @@ span {
   background: var(--white);
   padding: 24px;
   border-radius: 16px;
+  box-shadow: var(--box-shadow);
 }
 .car-dashboard-section .car-dashboard-content .main-content .revenue-table-header h5 {
   font-weight: 600;
@@ -596,6 +597,12 @@ span {
   height: 32px;
   object-fit: cover;
   margin-right: 10px;
+}
+.car-dashboard-section .car-dashboard-content .main-content .revenue-by-region {
+  background: var(--white);
+  border-radius: 16px;
+  box-shadow: var(--box-shadow);
+  padding: 24px 20px;
 }
 
 body {
