Fixed import warning for sass

--- a/main-files/dashboard/assets/css/main.css
+++ b/main-files/dashboard/assets/css/main.css
@@ -1,3 +1,6 @@
+/* --------------------------------------------
+    Template Default Fonts & Fonts Styles
+ ---------------------------------------------- */
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@@ -23,9 +26,6 @@
   --inter: "Inter", sans-serif;
 }
 
-/* --------------------------------------------
-    Template Default Fonts & Fonts Styles
- ---------------------------------------------- */
 body {
   font-family: "Kanit", sans-serif;
   font-size: 18px;
@@ -603,6 +603,12 @@ span {
   border-radius: 16px;
   box-shadow: var(--box-shadow);
   padding: 24px 20px;
+}
+.car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-chart {
+  width: 100%;
+}
+.car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-list {
+  margin-top: 20px;
 }
 
 body {
