--- a/main-files/dashboard/assets/scss/main.scss
+++ b/main-files/dashboard/assets/scss/main.scss
@@ -1,10 +1,10 @@
-@import "variables";
-@import "mixins";
-@import "typography";
-@import "preloader";
+@use "variables" as *;
+@use "mixins" as *;
+@use "typography" as *;
+@use "preloader" as *;
 
 // pages
-@import "car";
+@use "overview" as *;
 
 body {
   background: $bg-color;
