--- a/main-files/dashboard/assets/css/main.css
+++ b/main-files/dashboard/assets/css/main.css
@@ -606,9 +606,33 @@ span {
 }
 .car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-chart {
   width: 100%;
+  max-height: 250px;
+  height: 100%;
 }
 .car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-list {
   margin-top: 20px;
+  background: var(--bg-2);
+  padding: 16px;
+  border-radius: 16px;
+}
+.car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-list ul li {
+  margin-bottom: 10px;
+}
+.car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-list ul li div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-list ul li div span.country,
+.car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-list ul li div span.percentage {
+  font-weight: 500;
+  font-size: 14px;
+  color: var(--text-4);
+}
+.car-dashboard-section .car-dashboard-content .main-content .revenue-by-region .revenue-list ul li .progress {
+  height: 2px;
+  margin-top: 4px;
+  background: var(--white);
 }
 
 body {
