--- a/main-files/dashboard/assets/scss/_overview.scss
+++ b/main-files/dashboard/assets/scss/_overview.scss
@@ -291,10 +291,40 @@
 
         .revenue-chart {
           width: 100%;
+          max-height: 250px;
+          height: 100%;
         }
 
         .revenue-list {
           margin-top: 20px;
+          background: $bg-color-2;
+          padding: 16px;
+          border-radius: 16px;
+
+          ul {
+            li {
+              margin-bottom: 10px;
+
+              div {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                span.country,
+                span.percentage {
+                  font-weight: 500;
+                  font-size: 14px;
+                  color: $text-color-4;
+                }
+              }
+
+              .progress {
+                height: 2px;
+                margin-top: 4px;
+                background: $white;
+              }
+            }
+          }
         }
       }
     }
